# gen-ai-v2

./: Chatbot.ipynb  MiniLLM_from_Scratch.ipynb  QLoRA_FineTuning_DPO.ipynb  README.txt  cli_assistant.py  day1_bonus.py  download_pdpa_docs.py  exercise1.py  exercise2.py  exercise3.py  lab1.py  lab2.py  lab2a_prompt_duel.py  lab2b_thai_rag.py  lab3.ipynb  lab3.py  lab4.py  lab5.py  lab5_agent.py  lab6-chromadb.py  lab6_production.py  lab7.py  main.py  multihead-attention.py  naive_rag.py  native_rag_ollama.py  pyproject.toml  rag-with-chainlit.py  requirements.txt  thai_laws.faiss  thai_laws_metadata.json
agent/: README.md  pyproject.toml
agent/app/: __init__.py  agent.py  agent_registry.py  data.py  documentation_agent.py  main.py  memory.py  orchestrator_agent.py  pharmacy_agent.py  scheduling_agent.py  schemas.py  service_apps.py  tools.py  transport.py
agent/app/static/: app.js  index.html  styles.css
agent/data/: agent_demo.db
db/: chroma.sqlite3
docs/pdpa/: privacy_policy.txt
lab_db/: chroma.sqlite3
