[project]
name = "gen-ai-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.33.0",
    "anthropic>=0.40.0",
    "bitsandbytes>=0.43.0",
    "chainlit>=2.10.0",
    "chromadb>=1.5.5",
    "datasets>=2.20.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "instructor>=1.3.0",
    "langchain>=1.2.13",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langfuse>=2.50.0",
    "langgraph>=0.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openai>=1.50.0",
    "peft>=0.12.0",
    "pydantic>=2.7.0",
    "pypdf>=5.0.0",
    "pythainlp>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.10.0",
    "ragas>=0.1.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "sse-starlette>=2.1.0",
    "sseclient>=0.0.27",
    "streamlit>=1.55.0",
    "tiktoken>=0.7.0",
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "trl>=0.10.0",
    "uvicorn[standard]>=0.30.0",
]
